@@ -150,9 +150,20 @@ specifier|private
 name|Class
 argument_list|<
 name|?
+extends|extends
+name|SnowballProgram
 argument_list|>
 name|stemClass
 decl_stmt|;
+DECL|field|protectedWords
+specifier|private
+name|CharArraySet
+name|protectedWords
+init|=
+literal|null
+decl_stmt|;
+annotation|@
+name|Override
 DECL|method|inform
 specifier|public
 name|void
@@ -164,6 +175,51 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|String
+name|cfgLanguage
+init|=
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"language"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|cfgLanguage
+operator|!=
+literal|null
+condition|)
+name|language
+operator|=
+name|cfgLanguage
+expr_stmt|;
+name|String
+name|className
+init|=
+literal|"org.tartarus.snowball.ext."
+operator|+
+name|language
+operator|+
+literal|"Stemmer"
+decl_stmt|;
+name|stemClass
+operator|=
+name|loader
+operator|.
+name|newInstance
+argument_list|(
+name|className
+argument_list|,
+name|SnowballProgram
+operator|.
+name|class
+argument_list|)
+operator|.
+name|getClass
+argument_list|()
+expr_stmt|;
 name|String
 name|wordFiles
 init|=
@@ -194,92 +250,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-DECL|field|protectedWords
-specifier|private
-name|CharArraySet
-name|protectedWords
-init|=
-literal|null
-decl_stmt|;
-annotation|@
-name|Override
-DECL|method|init
-specifier|public
-name|void
-name|init
-parameter_list|(
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|args
-parameter_list|)
-block|{
-name|super
-operator|.
-name|init
-argument_list|(
-name|args
-argument_list|)
-expr_stmt|;
-specifier|final
-name|String
-name|cfgLanguage
-init|=
-name|args
-operator|.
-name|get
-argument_list|(
-literal|"language"
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|cfgLanguage
-operator|!=
-literal|null
-condition|)
-name|language
-operator|=
-name|cfgLanguage
-expr_stmt|;
-try|try
-block|{
-name|stemClass
-operator|=
-name|Class
-operator|.
-name|forName
-argument_list|(
-literal|"org.tartarus.snowball.ext."
-operator|+
-name|language
-operator|+
-literal|"Stemmer"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|ClassNotFoundException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"Can't find class for stemmer language "
-operator|+
-name|language
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-block|}
 DECL|method|create
 specifier|public
 name|TokenFilter
@@ -296,9 +266,6 @@ try|try
 block|{
 name|program
 operator|=
-operator|(
-name|SnowballProgram
-operator|)
 name|stemClass
 operator|.
 name|newInstance
