@@ -137,6 +137,21 @@ name|analysis
 operator|.
 name|util
 operator|.
+name|ClasspathResourceLoader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
 name|MultiTermAwareComponent
 import|;
 end_import
@@ -568,6 +583,8 @@ parameter_list|(
 name|AbstractAnalysisFactory
 name|factory
 parameter_list|)
+throws|throws
+name|IOException
 block|{
 name|boolean
 name|success
@@ -598,6 +615,36 @@ name|emptyMap
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|factory
+operator|instanceof
+name|ResourceLoaderAware
+condition|)
+block|{
+name|ResourceLoaderAware
+name|resourceLoaderAware
+init|=
+operator|(
+name|ResourceLoaderAware
+operator|)
+name|factory
+decl_stmt|;
+name|resourceLoaderAware
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|factory
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|success
 operator|=
 literal|true
