@@ -20,6 +20,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|lang
 operator|.
 name|reflect
@@ -116,9 +125,24 @@ name|lucene
 operator|.
 name|analysis
 operator|.
-name|phonetic
+name|util
 operator|.
-name|PhoneticFilter
+name|ResourceLoader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|ResourceLoaderAware
 import|;
 end_import
 begin_import
@@ -146,6 +170,8 @@ class|class
 name|PhoneticFilterFactory
 extends|extends
 name|TokenFilterFactory
+implements|implements
+name|ResourceLoaderAware
 block|{
 DECL|field|ENCODER
 specifier|public
@@ -330,21 +356,21 @@ argument_list|)
 expr_stmt|;
 block|}
 DECL|field|inject
-specifier|protected
 name|boolean
 name|inject
 init|=
 literal|true
 decl_stmt|;
+comment|//accessed by the test
 DECL|field|name
-specifier|protected
+specifier|private
 name|String
 name|name
 init|=
 literal|null
 decl_stmt|;
 DECL|field|clazz
-specifier|protected
+specifier|private
 name|Class
 argument_list|<
 name|?
@@ -356,14 +382,14 @@ init|=
 literal|null
 decl_stmt|;
 DECL|field|setMaxCodeLenMethod
-specifier|protected
+specifier|private
 name|Method
 name|setMaxCodeLenMethod
 init|=
 literal|null
 decl_stmt|;
 DECL|field|maxCodeLength
-specifier|protected
+specifier|private
 name|Integer
 name|maxCodeLength
 init|=
@@ -371,27 +397,17 @@ literal|null
 decl_stmt|;
 annotation|@
 name|Override
-DECL|method|init
+DECL|method|inform
 specifier|public
 name|void
-name|init
+name|inform
 parameter_list|(
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|String
-argument_list|>
-name|args
+name|ResourceLoader
+name|loader
 parameter_list|)
+throws|throws
+name|IOException
 block|{
-name|super
-operator|.
-name|init
-argument_list|(
-name|args
-argument_list|)
-expr_stmt|;
 name|inject
 operator|=
 name|getBoolean
@@ -465,6 +481,8 @@ operator|=
 name|resolveEncoder
 argument_list|(
 name|name
+argument_list|,
+name|loader
 argument_list|)
 expr_stmt|;
 block|}
@@ -554,6 +572,9 @@ name|resolveEncoder
 parameter_list|(
 name|String
 name|name
+parameter_list|,
+name|ResourceLoader
+name|loader
 parameter_list|)
 block|{
 name|String
@@ -584,49 +605,24 @@ block|}
 try|try
 block|{
 return|return
-name|Class
+name|loader
 operator|.
-name|forName
+name|newInstance
 argument_list|(
 name|lookupName
-argument_list|)
-operator|.
-name|asSubclass
-argument_list|(
+argument_list|,
 name|Encoder
 operator|.
 name|class
 argument_list|)
+operator|.
+name|getClass
+argument_list|()
 return|;
 block|}
 catch|catch
 parameter_list|(
-name|ClassNotFoundException
-name|cnfe
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|IllegalArgumentException
-argument_list|(
-literal|"Unknown encoder: "
-operator|+
-name|name
-operator|+
-literal|" must be full class name or one of "
-operator|+
-name|registry
-operator|.
-name|keySet
-argument_list|()
-argument_list|,
-name|cnfe
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
-name|ClassCastException
+name|RuntimeException
 name|e
 parameter_list|)
 block|{
@@ -634,11 +630,11 @@ throw|throw
 operator|new
 name|IllegalArgumentException
 argument_list|(
-literal|"Not an encoder: "
+literal|"Error loading encoder '"
 operator|+
 name|name
 operator|+
-literal|" must be full class name or one of "
+literal|"': must be full class name or one of "
 operator|+
 name|registry
 operator|.
