@@ -22,6 +22,15 @@ name|java
 operator|.
 name|io
 operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|StringReader
 import|;
 end_import
@@ -133,6 +142,21 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|ClasspathResourceLoader
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|util
 operator|.
 name|LuceneTestCase
@@ -168,6 +192,8 @@ specifier|public
 name|void
 name|testFactory
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|Map
 argument_list|<
@@ -211,6 +237,20 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|ff
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|ff
@@ -247,6 +287,20 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|ff
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertFalse
 argument_list|(
 name|ff
@@ -270,6 +324,20 @@ operator|.
 name|init
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|ff
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -297,6 +365,8 @@ specifier|public
 name|void
 name|testFactoryCaseFailure
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|Map
 argument_list|<
@@ -322,6 +392,18 @@ operator|new
 name|PhoneticFilterFactory
 argument_list|()
 decl_stmt|;
+name|ClasspathResourceLoader
+name|loader
+init|=
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|ff
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+decl_stmt|;
 try|try
 block|{
 name|ff
@@ -329,6 +411,13 @@ operator|.
 name|init
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
 argument_list|)
 expr_stmt|;
 name|fail
@@ -363,6 +452,13 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
+argument_list|)
+expr_stmt|;
 name|fail
 argument_list|(
 literal|"unknown encoder parameter"
@@ -395,6 +491,13 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
+argument_list|)
+expr_stmt|;
 name|fail
 argument_list|(
 literal|"unknown encoder parameter"
@@ -414,6 +517,8 @@ specifier|public
 name|void
 name|testFactoryCaseReflection
 parameter_list|()
+throws|throws
+name|IOException
 block|{
 name|Map
 argument_list|<
@@ -439,6 +544,18 @@ operator|new
 name|PhoneticFilterFactory
 argument_list|()
 decl_stmt|;
+name|ClasspathResourceLoader
+name|loader
+init|=
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|ff
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+decl_stmt|;
 name|args
 operator|.
 name|put
@@ -455,6 +572,13 @@ operator|.
 name|init
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
 argument_list|)
 expr_stmt|;
 name|assertTrue
@@ -495,6 +619,13 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|ff
@@ -530,6 +661,13 @@ operator|.
 name|init
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|ff
+operator|.
+name|inform
+argument_list|(
+name|loader
 argument_list|)
 expr_stmt|;
 name|assertTrue
@@ -959,6 +1097,20 @@ operator|.
 name|init
 argument_list|(
 name|args
+argument_list|)
+expr_stmt|;
+name|factory
+operator|.
+name|inform
+argument_list|(
+operator|new
+name|ClasspathResourceLoader
+argument_list|(
+name|factory
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|TokenStream
